--- a/api/game/models/game.settings.json
+++ b/api/game/models/game.settings.json
@@ -42,12 +42,11 @@
     "rating": {
       "type": "enumeration",
       "enum": [
-        "FREE",
-        "pegi3",
-        "pegi7",
-        "pegi12",
-        "pegi16",
-        "pegi18"
+        "BR0",
+        "BR10",
+        "BR14",
+        "BR16",
+        "BR18"
       ]
     },
     "cover": {
@@ -60,7 +59,7 @@
       "required": false,
       "pluginOptions": {}
     },
-    "galery": {
+    "gallery": {
       "collection": "file",
       "via": "related",
       "allowedTypes": [
